k8s/manifests/forecast-experience/bff/services/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wf-exp-bff-service
  namespace: backend
spec:
  selector:
    app: wf-exp-bff
    version: v1
  ports:
  - name: http
    port: 8080
    targetPort: 80
